--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "adodb/adodb-php": "^5.20"
+        "adodb/adodb-php": "^5.20",
+        "smarty/smarty": "^3.1"
     }
 }
